==> daniel0076/CC1101_PSOC6/CC1101_PSOC6.cpp <==
#include "cy_retarget_io.h"
#include <CC1101_PSOC6.h>

void CC1101::reset(void)                  // reset defined in CC1101 datasheet
{
    SPI_DRIVE_CSN_LOW();
    cyhal_system_delay_us(10);
    SPI_DRIVE_CSN_HIGH();
    cyhal_system_delay_us(40);

    spi_write_strobe(SRES);
    cyhal_system_delay_us(100);
}

uint8_t CC1101::begin(volatile uint8_t &My_addr)
{
    uint8_t CC1101_freq_select, CC1101_mode_select, CC1101_channel_select;
    uint8_t partnum, version;

    GDO_set();                            //setup AVR GPIO ports

    set_debug_level(set_debug_level());   //set debug level of CC1101 outputs

    if(debug_level > 0){
        printf("Init CC1101...\n");
    }

    spi_begin();                          //inits SPI Interface
    reset();                              //CC1101 init reset

    spi_write_strobe(SFTX);  cyhal_system_delay_us(100);//flush the TX_fifo content
    spi_write_strobe(SFRX);  cyhal_system_delay_us(100);//flush the RX_fifo content

    partnum = spi_read_register(PARTNUM); //reads CC1101 partnumber
    version = spi_read_register(VERSION); //reads CC1101 version number

    //checks if valid Chip ID is found. Usualy 0x03 or 0x14. if not -> abort
    if(version == 0x00 || version == 0xFF){
            if(debug_level > 0){
                printf("No CC1101 Found\n");
            }

            return FALSE;
        }

    if(debug_level > 0){
        printf("Partnumber: %x\n", partnum);
        printf("Version: %x\n", version);
    }

    //default settings
    My_addr = 0x00;
    CC1101_freq_select = 0x02;    //433.92MHz
    CC1101_mode_select = 0x01;    //gfsk 1.2kbps
    CC1101_channel_select = 0x01;


    //set modulation mode
    set_mode(CC1101_mode_select);

    //set ISM band
    set_ISM(CC1101_freq_select);

    //set channel
    set_channel(CC1101_channel_select);

    //set output power amplifier
    set_output_power_level(0);            //set PA to 0dBm as default

    //set my receiver address
    set_myaddr(My_addr);                  //set addr

    if(debug_level > 0){
        printf("...done\n");
    }

    receive();                            //set CC1101 in receive mode

    return TRUE;
}

uint8_t CC1101::sidle(void)
{
    uint8_t marcstate;

    spi_write_strobe(SIDLE);              //sets to idle first. must be in

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x01)              //0x01 = sidle
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of CC1101 to be sure in RX
    }
      cyhal_system_delay_us(100);
    return TRUE;
}

uint8_t CC1101::transmit(void)
{
    uint8_t marcstate;

    sidle();                              //sets to idle first.
    spi_write_strobe(STX);                //sends the data over air

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x01)              //0x01 = ILDE after sending data
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of CC1101 to be sure in IDLE and TX is finished
        //uart_puthex_byte(marcstate);
    }
      cyhal_system_delay_us(100);
    return TRUE;
}

uint8_t CC1101::receive(void)
{
    uint8_t marcstate;

    sidle();                              //sets to idle first.
    spi_write_strobe(SRX);                //writes receive strobe (receive mode)

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x0D)              //0x0D = RX
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of CC1101 to be sure in RX
        //uart_puthex_byte(marcstate);
    }
      cyhal_system_delay_us(100);
    return TRUE;
}

void CC1101::wor_enable()
{
/*
    EVENT1 = WORCTRL[6:4] -> Datasheet page 88
    EVENT0 = (750/Xtal)*(WOREVT1<<8+WOREVT0)*2^(5*WOR_RES) = (750/26Meg)*65407*2^(5*0) = 1.89s

                        (WOR_RES=0;RX_TIME=0)               -> Datasheet page 80
i.E RX_TIMEOUT = EVENT0*       (3.6038)      *26/26Meg = 235.8ms
                        (WOR_RES=0;RX_TIME=1)               -> Datasheet page 80
i.E.RX_TIMEOUT = EVENT0*       (1.8029)      *26/26Meg = 117.9ms
*/
    sidle();

    spi_write_register(MCSM0, 0x18);    //FS Autocalibration
    spi_write_register(MCSM2, 0x01);    //MCSM2.RX_TIME = 1b

    // configure EVENT0 time
    spi_write_register(WOREVT1, 0xFF);  //High byte Event0 timeout
    spi_write_register(WOREVT0, 0x7F);  //Low byte Event0 timeout

    // configure EVENT1 time
    spi_write_register(WORCTRL, 0x78);  //WOR_RES=0b; tEVENT1=0111b=48d -> 48*(750/26MHz)= 1.385ms

    spi_write_strobe(SFRX);             //flush RX buffer
    spi_write_strobe(SWORRST);          //resets the WOR timer to the programmed Event 1
    spi_write_strobe(SWOR);             //put the radio in WOR mode when CSn is released

      cyhal_system_delay_us(100);
}

void CC1101::wor_reset()
{
    sidle();                            //go to IDLE
    spi_write_register(MCSM2, 0x01);    //MCSM2.RX_TIME = 1b
    spi_write_strobe(SFRX);             //flush RX buffer
    spi_write_strobe(SWORRST);          //resets the WOR timer to the programmed Event 1
    spi_write_strobe(SWOR);             //put the radio in WOR mode when CSn is released

      cyhal_system_delay_us(100);
}

uint8_t CC1101::rx_payload_burst(uint8_t rxbuffer[], uint8_t &pktlen)
{
    uint8_t bytes_in_RXFIFO = 0;
    uint8_t res = 0;

    bytes_in_RXFIFO = spi_read_register(RXBYTES);              //reads the number of bytes in RXFIFO

    if((bytes_in_RXFIFO & 0x7F) && !(bytes_in_RXFIFO & 0x80))  //if bytes in buffer and no RX Overflow
    {
        spi_read_burst(RXFIFO_BURST, rxbuffer, bytes_in_RXFIFO);
        pktlen = rxbuffer[0];
        res = TRUE;
    }
    else
    {
        if(debug_level > 0){
            printf("no bytes in RX buffer or RX Overflow!: ");
            printf("%x\n", bytes_in_RXFIFO);
        }
        sidle();                                                  //set to IDLE
        spi_write_strobe(SFRX);  cyhal_system_delay_us(100);            //flush RX Buffer
        receive();                                                //set to receive mode
        res = FALSE;
    }

    return res;
}

void CC1101::spi_begin(void)
{

    //|--- Activating the SPI interface of PSOC62 --------|
    //|--- The Macros are defined in pins.h -------------|

   /* configure all SPI related pins */
    cy_rslt_t result = cyhal_spi_init( &hal_SPI, SPI_MOSI, SPI_MISO, SPI_SCLK,
                             SPI_CSN, NULL, 8, CYHAL_SPI_MODE_00_MSB, false);
    if (result != CY_RSLT_SUCCESS)
    {
        handle_error();
    }
    result = cyhal_spi_set_frequency(&hal_SPI, 1000000);    // CC1101 works around 1MHz clock;
    if (result != CY_RSLT_SUCCESS)
    {
        handle_error();
    }

}

void CC1101::GDO_set()
{
    cyhal_gpio_init(SPI_GDO0, CYHAL_GPIO_DIR_INPUT, CYHAL_GPIO_DRIVE_PULLDOWN, 0);
    cyhal_gpio_init(SPI_GDO2, CYHAL_GPIO_DIR_INPUT, CYHAL_GPIO_DRIVE_PULLDOWN, 0);
}

uint8_t CC1101::spi_putc(uint8_t data)
{
    uint32_t status;
    Cy_SCB_SPI_Write(hal_SPI.base, data);
    while (Cy_SCB_SPI_IsTxComplete(hal_SPI.base) == false) { }
    while (Cy_SCB_SPI_GetNumInRxFifo(hal_SPI.base) == 0) { } /* Wait for RX FIFO not empty */
    status = Cy_SCB_SPI_Read(hal_SPI.base);

    return (uint8_t)status;
}
